--- a/TODO.txt
+++ b/TODO.txt
@@ -5,7 +5,7 @@ tfg disse pra botar na lib:
 * Z-algorithm (não necessário, mas muito útil)
 * Primitivas de Geometria (Ponto com produto escalar e vetorial)
     - Aprender como usar isso pra achar coisa de interseção de reta (prioridade baixa)
-    - Convex Hull, Convex Hull Trick (prioridade alta)
+    - Convex Hull Trick (prioridade alta)
 * Fluxo máximo
 * Min Cost Max Flow (prioridade baixa, não é dificil se vc entende fluxo máximo)
 * Segtree persistente
@@ -13,7 +13,6 @@ tfg disse pra botar na lib:
 * Fórmula de Faulhaber até soma de cubos
 * Mo rápido daquele blog do cf (prioridade baixa)
 * BIT 2D (a que vc já sabe os updates antes, é bom só que não é necessário)
-* Treap
 * BCC
 * SCC
 * Aprender o que é convolução
@@ -30,9 +29,7 @@ Coisas a mais que eu quero:
 * Segtree iterativa com lazy propagation (reference: https://codeforces.com/blog/entry/18051)
 * Sparse Table
 * Centroid Decomposition
-* Melhorar o ModInt
 * Min Queue
-* Função de mobius (?)
 * Minkowski sum (aprender)
 * Números de Stirling do primeiro tipo (ler)
 * Números de Stirling do segundo tipo (adicionar no BasicComb.cpp)
@@ -40,6 +37,8 @@ Coisas a mais que eu quero:
 
 Need Revision:
 
+* Treap
+* Convex-Hull
 * Binary Lifting (LCA) 
 * HLD
 * Matrix (Comparar a performance de std::vector, std::array e vetores)
